--- a/index.html
+++ b/index.html
@@ -19,10 +19,13 @@
     <title>Document</title>
 </head>
 <body>
-    <div class=" d-flex bg-warning">
-      <h1> Hello world</h1>
-      <p>Hi there</p>
-      <i class="fa-brands fa-twitter"></i>
-    </div>
+   <div class="hero">
+    <p>Hi I'am</p>
+    <h1>Precious Ramasilo</h1>
+    <h2 class="mb-5">Front-end developer, based in South Africa.</h2>
+    <div>
+    <a href="#" class="btn btn-branding">Get started</a>
+  </div>
+   </div>
 </body>
 </html>
