--- a/index.html
+++ b/index.html
@@ -1,31 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-          integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
-          crossorigin="anonymous" referrerpolicy="no-referrer" />
-          <link rel="preconnect" href="https://fonts.googleapis.com">
-          <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-          <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@500;700&display=swap"
-            rel="stylesheet">
 
-        <link rel="stylesheet" href="/src/styles.css">
-    <title>Document</title>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+    crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@500;700&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="/src/styles.css">
+  <title>Document</title>
 </head>
+
 <body>
-   <div class="hero">
+  <div class="hero">
     <p>Hi I'am</p>
     <h1>Precious Ramasilo</h1>
     <h2 class="mb-5">Front-end developer, based in South Africa.</h2>
     <div>
-    <a href="#" class="btn btn-branding">Get started</a>
+      <a href="#" class="btn btn-branding">Get started</a>
+    </div>
   </div>
-   </div>
+  <P class="text-center m-5">Featured Project which my best projects be choice to show</P>
+  <div class="container">
+    <div class="row mb-5">
+      <div class="col d-none d-lg-block">
+        <img src="/images/yogurt.png" class="img-fluid" alt="yogurt">
+      </div>
+      <div class="col">
+        <div class="project-descriptions">
+        <h2 class="mb-5">Yogurt Project</h2>
+        <p class="mb-5 text-muted">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the
+          blind texts.
+          Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named
+          Duden flows by</p>
+        <a href="#" class="btn btn-branding-outline">View detail project</a>
+      </div>
+      </div>
+    </div>
+    <div class="row mb-5">
+      
+      <div class="col">
+        <div class="project-descriptions">
+          <h2 class="mb-5">Weather App</h2>
+         
+          <p class="mb-5 text-muted">Far far away, behind the word mountains, far from the countries Vokalia and
+            Consonantia, there live the
+            blind texts.
+            Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river
+            named
+            Duden flows by</p>
+          <a href="#" class="btn btn-branding-outline">View detail project</a>
+        </div>
+      </div> 
+      <div class="col d-none d-lg-block">
+        <img src="/images/weather.png" class="img-fluid" alt="weather app">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col d-none d-lg-block">
+        <img src="/images/dictionary.png" class="img-fluid" alt="dictionary app">
+      </div>
+      <div class="col">
+        <div class="project-descriptions">
+          <h2 class="mb-5">Dictionary App</h2>
+          <p class="mb-5 text-muted">Far far away, behind the word mountains, far from the countries Vokalia and
+            Consonantia, there live the
+            blind texts.
+            Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river
+            named
+            Duden flows by</p>
+          <a href="#" class="btn btn-branding-outline">View detail project</a>
+        </div>
+      </div>
+    </div>
+  
+</div>
 </body>
+
 </html>
