--- a/about.html
+++ b/about.html
@@ -15,9 +15,32 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@500;700&display=swap"
       rel="stylesheet">
     <link rel="stylesheet" href="/src/styles.css">
-    <title>Document</title>
+    <title>About Precious - Precious Ramasilo</title>
+    <meta name="description" content="About Precious Ramasilo">
 </head>
 <body>
+  <div class="container"></div>
+  <nav class="d-flex justify-content-between">
+    <a href="/">
+      <img src="/images/logo.png" class="logo d-none d-md-block" alt="Shecodes logo" title="Homepage">
+      <img src="/images/small-logo.jpg" class="logo d-block d-md-none" alt="Shecodes logo" title="Homepage">
+    </a>
+    <ul>
+      <li>
+        <a href="/" title="Homepage">Home</a>
+      </li>
+      <li class="active">
+        <a href="/about.html" title="About Precious">About</a>
+      </li>
+      <li>
+        <a href="/work.html" title="Precious's work">Work</a>
+      </li>
+      <li>
+        <a href="/contact.html" title="contact Precious">Contact</a>
+      </li>
+    </ul>
+  </nav>
+  </div>
   <div class="content-container container">
     <div class="row">
       <div class="col-lg-6">
@@ -29,13 +52,39 @@
    <p class="mb-5">For anyone who wants to start learning code, this workshop is very interesting. You will be challenged with different
   exercises, and everything is well explained, homework and deadlines are good for keep focus
 </p>
-<a href="" class="btn btn-branding">View my project</a>
+<a href="/work.html" class="btn btn-branding">View my project</a>
 </div>
 </div>
 <div class="col-lg-6">
-<img src="/images/precious.jpg" alt="" class="img-fluid">
+<img src="/images/precious.jpg" alt="Precious Ramasilo's image" class="img-fluid">
 </div>
 </div>
+<footer>
+  <div class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex">
+    <div>
+      <h3>
+        Work Inquiry
+      </h3>
+      <p class="text-muted">Let's work together</p>
+    </div>
+    <div>
+      <a href="/contact.html" class="btn btn-branding mt-3" title="Contact Precious">Contact me</a>
+    </div>
+  </div>
+  <div class="d-flex justify-content-center mb-5">
+    <a href="mailto:precious@gmail.com" class="email-link" title="Email Precious">precious@gmail.com</a>
+  </div>
+  <div class="social-links d-flex justify-content-center">
+    <a href="https://instagram.com/reciousL" target="_blank" title="Instagram Profile"><i
+        class="fa-brands fa-instagram"></i></a>
+    <a href="https://github.com/reciousL" target="_blank" title="Github Profile"><i class="fa-brands fa-github"></i></a>
+    <a href="https://twitter.com/reciousL" target="_blank" title=" Twitter Profile"><i
+        class="fa-brands fa-twitter"></i></a>
+  </div>
+  <P class="text-center mt-5">This project was coded by Precious Ramasilo, and it is
+    <a href="https://github.com/Ramasilo/portfolio-project" target="_blank">Open-sourced.</a>
+  </P>
+</footer>
 </div>
 </body>
 </html>
