--- a/contact.html
+++ b/contact.html
@@ -18,10 +18,33 @@
     href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@500;700&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="/src/styles.css">
-  <title>Document</title>
+  <title>Contact Precious - Precious Ramasilo</title>
+  <meta name="description" content="Contact Precious - Precious Ramasilo is a front-end student">
 </head>
 
 <body>
+  <div class="container"></div>
+  <nav class="d-flex justify-content-between">
+    <a href="/">
+      <img src="/images/logo.png" class="logo d-none d-md-block" alt="Shecodes logo" title="Homepage">
+      <img src="/images/small-logo.jpg" class="logo d-block d-md-none" alt="Shecodes logo" title="Homepage">
+    </a>
+    <ul>
+      <li>
+        <a href="/" title="Homepage">Home</a>
+      </li>
+      <li>
+        <a href="/about.html" title="About Precious">About</a>
+      </li>
+      <li>
+        <a href="/work.html" title="Precious's work">Work</a>
+      </li>
+      <li class="active">
+        <a href="/contact.html" title="contact Precious">Contact</a>
+      </li>
+    </ul>
+  </nav>
+  </div>
   <div class="content-container container">
     <div class="content">
       <h1 class="mb-5">
@@ -35,6 +58,11 @@
       <p><a href="https://instagram.com/reciousL" target="_blank">@reciousL</a></p>
 
     </div>
+    <footer>
+      <P class="text-center mt-5">This project was coded by Precious Ramasilo, and it is
+        <a href="https://github.com/Ramasilo/portfolio-project" target="_blank">Open-sourced.</a>
+      </P>
+    </footer>
   </div>
 </body>
 
