--- a/index.html
+++ b/index.html
@@ -18,28 +18,29 @@
     href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@500;700&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="/src/styles.css">
-  <title>Document</title>
+  <title>Front-end developer student - Precious Ramasilo</title>
+  <meta name="description" content="Learning how to be a front-end coder - Precious Ramasilo">
 </head>
 
 <body>
   <div class="container"></div>
   <nav class="d-flex justify-content-between">
     <a href="/">
-    <img src="/images/logo.png" class="logo d-none d-md-block" alt="">
-    <img src="/images/small-logo.jpg" class="logo d-block d-md-none" alt="">
+    <img src="/images/logo.png" class="logo d-none d-md-block" alt="Shecodes logo" title="Homepage">
+    <img src="/images/small-logo.jpg" class="logo d-block d-md-none" alt="Shecodes logo" title="Homepage">
   </a>
     <ul>
       <li class="active">
-        <a href="/">Home</a>
+        <a href="/" title="Homepage">Home</a>
       </li>
       <li>
-        <a href="/about.html">About</a>
+        <a href="/about.html" title="About Precious">About</a>
       </li>
       <li>
-        <a href="/work.html">Work</a>
+        <a href="/work.html" title="Precious's work">Work</a>
     </li>
       <li>
-        <a href="/contact.html">Contact</a>
+        <a href="/contact.html" title="contact Precious">Contact</a>
       </li>
     </ul>
   </nav>
@@ -50,14 +51,14 @@
     <h1>Precious Ramasilo</h1>
     <h2 class="mb-5">Front-end developer, based in South Africa.</h2>
     <div>
-      <a href="#" class="btn btn-branding">Get started</a>
+      <a href="/about.html" class="btn btn-branding" title="About Precious">Get started</a>
     </div>
   </div>
   <P class="text-center m-5">Featured Project which my best projects be choice to show</P>
   <div class="container">
     <div class="row mb-5">
       <div class="col d-none d-lg-block">
-        <img src="/images/yogurt.png" class="img-fluid" alt="yogurt">
+        <img src="/images/yogurt.png" class="img-fluid" alt="yogurt project preview">
       </div>
       <div class="col">
         <div class="project-descriptions">
@@ -66,7 +67,7 @@
           blind texts.
           Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named
           Duden flows by</p>
-        <a href="#" class="btn btn-branding-outline">View detail project</a>
+        <a href="/work.html" class="btn btn-branding-outline" title="Precious's work">View detail project</a>
       </div>
       </div>
     </div>
@@ -82,7 +83,7 @@
             Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river
             named
             Duden flows by</p>
-          <a href="#" class="btn btn-branding-outline">View detail project</a>
+          <a href="/work.html" class="btn btn-branding-outline" title="Precious's work">View detail project</a>
         </div>
       </div> 
       <div class="col d-none d-lg-block">
@@ -91,7 +92,7 @@
     </div>
     <div class="row">
       <div class="col d-none d-lg-block">
-        <img src="/images/dictionary.png" class="img-fluid" alt="dictionary app">
+        <img src="/images/dictionary.png" class="img-fluid" alt="dictionary app preview">
       </div>
       <div class="col">
         <div class="project-descriptions">
@@ -102,31 +103,34 @@
             Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river
             named
             Duden flows by</p>
-          <a href="#" class="btn btn-branding-outline">View detail project</a>
+          <a href="/work.html" class="btn btn-branding-outline" title="Precious's work">View detail project</a>
         </div>
       </div>
     </div>
     <footer>
       <div class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex">
         <div>
-        <h4>
+        <h3>
           Work Inquiry
-        </h4>
+        </h3>
         <p class="text-muted">Let's work together</p>
       </div>
       <div>
-        <a href="" class="btn btn-branding mt-3">Contact me</a>
+        <a href="/contact.html" class="btn btn-branding mt-3" title="Contact Precious">Contact me</a>
       </div>
       </div>  
       <div class="d-flex justify-content-center mb-5">
-      <a href="mailto:precious@gmail.com" class="email-link">precious@gmail.com</a>
+      <a href="mailto:precious@gmail.com" class="email-link" title="Email Precious">precious@gmail.com</a>
     </div>
       <div class="social-links d-flex justify-content-center">
-      <a href="https://instagram.com/reciousL" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-      <a href="https://github.com/reciousL" target="_blank"><i class="fa-brands fa-github"></i></a>
-      <a href="https://twitter.com/reciousL" target="_blank"><i class="fa-brands fa-twitter"></i></a>
-    </footer>
+      <a href="https://instagram.com/reciousL" target="_blank" title="Instagram Profile"><i class="fa-brands fa-instagram"></i></a>
+      <a href="https://github.com/reciousL" target="_blank" title="Github Profile"><i class="fa-brands fa-github"></i></a>
+      <a href="https://twitter.com/reciousL" target="_blank" title=" Twitter Profile"><i class="fa-brands fa-twitter"></i></a>
   </div>
+  <P class="text-center mt-5">This project was coded by Precious Ramasilo, and it is
+    <a href="https://github.com/Ramasilo/portfolio-project" target="_blank">Open-sourced.</a>
+  </P>
+</footer>
 </div>
 </body>
 
