--- a/work.html
+++ b/work.html
@@ -18,10 +18,33 @@
     href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@500;700&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="/src/styles.css">
-  <title>Document</title>
+  <title>Precious's work - Precious Ramasilo</title>
+  <meta name="description" content="The projects previews">
 </head>
 
 <body>
+  <div class="container"></div>
+  <nav class="d-flex justify-content-between">
+    <a href="/">
+      <img src="/images/logo.png" class="logo d-none d-md-block" alt="Shecodes logo" title="Homepage">
+      <img src="/images/small-logo.jpg" class="logo d-block d-md-none" alt="Shecodes logo" title="Homepage">
+    </a>
+    <ul>
+      <li >
+        <a href="/" title="Homepage">Home</a>
+      </li>
+      <li>
+        <a href="/about.html" title="About Precious">About</a>
+      </li>
+      <li class="active">
+        <a href="/work.html" title="Precious's work">Work</a>
+      </li>
+      <li>
+        <a href="/contact.html" title="contact Precious">Contact</a>
+      </li>
+    </ul>
+  </nav>
+  </div>
   <div class="content-container container">
     <div class="content">
       <h1 class="mb-4">
@@ -29,28 +52,54 @@
       </h1>
       <div class="row">
         <div class="col-md-6 mb-4">
-          <img src="/images/yogurt.png" class="img-fluid mb-2" alt=""/>
+          <img src="/images/yogurt.png" class="img-fluid mb-2" alt=" Yogurt project preview"/>
           <h3 class="text-lg-center m-0" >Yogurt Project</h3>
           <P class="text-center text-muted">Built with HTML  and CSS</P>
         </div>
         <div class="col-md-6 mb-4">
-          <img src="/images/weather.png" class="img-fluid mb-2" alt="" />
+          <img src="/images/weather.png" class="img-fluid mb-2" alt="Weather App />
           <h3 class="text-lg-center m-0">Weather Project</h3>
           <P class="text-center text-muted">Built with HTML, CSS and JavaScrip</P>
         </div>
         <div class="col-md-6 mb-4">
-          <img src="/images/dictionary.png" class="img-fluid mb-2" alt="" />
+          <img src="/images/dictionary.png" class="img-fluid mb-2" alt="Dictionary project preview" />
           <h3 class="text-lg-center m-0">Dictionary App</h3>
           <P class="text-center text-muted">Built with HTML with CSS</P>
         </div>
         <div class="col-md-6 mb-4">
-          <img src="/images/translation.png" class="img-fluid mb-2" alt="" />
+          <img src="/images/translation.png" class="img-fluid mb-2" alt="Translation project preview" />
           <h3 class="text-lg-center m-0">Translation APP</h3>
           <P class="text-center text-muted">Built with HTML, CSS with JavaScrip</P>
         </div>
       </div> 
       
     </div>
+    <footer>
+      <div class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex">
+        <div>
+          <h3>
+            Work Inquiry
+          </h3>
+          <p class="text-muted">Let's work together</p>
+        </div>
+        <div>
+          <a href="/contact.html" class="btn btn-branding mt-3" title="Contact Precious">Contact me</a>
+        </div>
+      </div>
+      <div class="d-flex justify-content-center mb-5">
+        <a href="mailto:precious@gmail.com" class="email-link" title="Email Precious">precious@gmail.com</a>
+      </div>
+      <div class="social-links d-flex justify-content-center">
+        <a href="https://instagram.com/reciousL" target="_blank" title="Instagram Profile"><i
+            class="fa-brands fa-instagram"></i></a>
+        <a href="https://github.com/reciousL" target="_blank" title="Github Profile"><i class="fa-brands fa-github"></i></a>
+        <a href="https://twitter.com/reciousL" target="_blank" title=" Twitter Profile"><i
+            class="fa-brands fa-twitter"></i></a>
+      </div>
+      <P class="text-center mt-5">This project was coded by Precious Ramasilo, and it is
+        <a href="https://github.com/Ramasilo/portfolio-project" target="_blank">Open-sourced.</a>
+      </P>
+    </footer>
   </div>
 </body>
 
